# crop_hull_filter

./: CHANGELOG.rst  CMakeLists.txt  README.md  nodelet.xml  package.xml
config/: example.yaml
include/crop_hull_filter/: crop_hull_filter.h
launch/: example.launch
src/: crop_hull_filter.cpp
